--- a/arch/arm/configs/popcorn_oc_defconfig
+++ b/arch/arm/configs/popcorn_oc_defconfig
@@ -476,20 +476,23 @@ CONFIG_CPU_FREQ_STAT=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_POWERSAVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_USERSPACE is not set
-CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND=y
+# CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_HOTPLUG is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_LAGFREE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_SMARTASS2 is not set
+CONFIG_CPU_FREQ_DEFAULT_GOV_GALLIMAUFRY=y
+# CONFIG_CPU_FREQ_DEFAULT_GOV_AGGRESSIVE is not set
 # CONFIG_CPU_FREQ_GOV_PERFORMANCE is not set
 # CONFIG_CPU_FREQ_GOV_POWERSAVE is not set
 # CONFIG_CPU_FREQ_GOV_USERSPACE is not set
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
-CONFIG_CPU_FREQ_GOV_ONDEMAND_2_PHASE=y
-CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
+# CONFIG_CPU_FREQ_GOV_CONSERVATIVE is not set
 CONFIG_CPU_FREQ_GOV_SMARTASS2=y
+CONFIG_CPU_FREQ_GOV_GALLIMAUFRY=y
+CONFIG_CPU_FREQ_GOV_AGGRESSIVE=y
 CONFIG_CPU_FREQ_GOV_LAGFREE=y
 CONFIG_CPU_FREQ_MIN_TICKS=12
 CONFIG_CPU_FREQ_SAMPLING_LATENCY_MULTIPLIER=1000
