--- a/arch/arm/configs/popcorn_defconfig
+++ b/arch/arm/configs/popcorn_defconfig
@@ -1771,7 +1771,7 @@ CONFIG_FB_OMAP2_NUM_FBS=3
 #
 CONFIG_PANEL_S6E8AA0=y
 # CONFIG_PANEL_TAAL is not set
-CONFIG_COLOR_GAMMA_HACK=y
+CONFIG_COLOR_CONTROL=y
 CONFIG_DSSCOMP=y
 CONFIG_DSSCOMP_DEBUG_LOG=y
 CONFIG_OMAP4_HDCP=y
