--- a/arch/arm/configs/popcorn_defconfig
+++ b/arch/arm/configs/popcorn_defconfig
@@ -36,7 +36,7 @@ CONFIG_HAVE_IRQ_WORK=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-PopcornKernel-v7.4"
+CONFIG_LOCALVERSION="-PopcornKernel-v7.4.1"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -69,15 +69,13 @@ CONFIG_GENERIC_IRQ_CHIP=y
 #
 # RCU Subsystem
 #
-# CONFIG_TREE_RCU is not set
+CONFIG_TREE_RCU=y
 # CONFIG_TREE_PREEMPT_RCU is not set
-CONFIG_JRCU=y
 # CONFIG_PREEMPT_RCU is not set
-CONFIG_JRCU_DAEMON=y
-CONFIG_JRCU_DAEMON_PRIO=0
-# CONFIG_JRCU_LAZY is not set
-CONFIG_PREEMPT_COUNT_CPU=y
 # CONFIG_RCU_TRACE is not set
+CONFIG_RCU_FANOUT=32
+# CONFIG_RCU_FANOUT_EXACT is not set
+CONFIG_RCU_FAST_NO_HZ=y
 # CONFIG_TREE_RCU_TRACE is not set
 # CONFIG_IKCONFIG is not set
 CONFIG_LOG_BUF_SHIFT=17
@@ -486,15 +484,15 @@ CONFIG_CPU_FREQ_STAT=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_HOTPLUG is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_LAGFREE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_SMARTASS2 is not set
-CONFIG_CPU_FREQ_DEFAULT_GOV_GALLIMAUFRY=y
-# CONFIG_CPU_FREQ_DEFAULT_GOV_AGGRESSIVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_GALLIMAUFRY is not set
+CONFIG_CPU_FREQ_DEFAULT_GOV_AGGRESSIVE=y
 # CONFIG_CPU_FREQ_GOV_PERFORMANCE is not set
 # CONFIG_CPU_FREQ_GOV_POWERSAVE is not set
 # CONFIG_CPU_FREQ_GOV_USERSPACE is not set
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 # CONFIG_CPU_FREQ_GOV_CONSERVATIVE is not set
-CONFIG_CPU_FREQ_GOV_SMARTASS2=y
+# CONFIG_CPU_FREQ_GOV_SMARTASS2 is not set
 CONFIG_CPU_FREQ_GOV_GALLIMAUFRY=y
 CONFIG_CPU_FREQ_GOV_AGGRESSIVE=y
 # CONFIG_CPU_FREQ_GOV_LAGFREE is not set
@@ -2496,6 +2494,7 @@ CONFIG_STACKTRACE=y
 CONFIG_DEBUG_BUGVERBOSE=y
 # CONFIG_DEBUG_MEMORY_INIT is not set
 CONFIG_FRAME_POINTER=y
+CONFIG_RCU_CPU_STALL_TIMEOUT=60
 # CONFIG_LKDTM is not set
 CONFIG_SYSCTL_SYSCALL_CHECK=y
 CONFIG_HAVE_FUNCTION_TRACER=y
