--- a/arch/arm/configs/popcorn_defconfig
+++ b/arch/arm/configs/popcorn_defconfig
@@ -36,7 +36,7 @@ CONFIG_HAVE_IRQ_WORK=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-PopcornKernel-v8.2"
+CONFIG_LOCALVERSION="-PopcornKernel-v8.2.1"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -1131,6 +1131,7 @@ CONFIG_LTE_LINK_USB=y
 CONFIG_LTE_MODEM_CMC221=y
 CONFIG_BLX=y
 CONFIG_COLOR_CONTROL=y
+CONFIG_SOUND_CONTROL=y
 CONFIG_HAVE_IDE=y
 # CONFIG_IDE is not set
 
